--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 * {
     box-sizing: border-box;
     margin: 0;
-    padding: o;
+    padding: 0;
 }
 
 body {
@@ -25,7 +25,7 @@ body {
 header {
     flex: 1;
     height: 100%;
-    display: flex;
+    display: flex; 
     align-items: center;
     justify-content: center;
 }
@@ -34,3 +34,36 @@ header h1 {
     font-size: 60px;
 }
 
+.counters {
+    background: #0f479a;
+    color: #fff;
+    padding: 40px 20px; 
+    border-top: 3px lightskyblue solid;
+}
+
+.counters .container {
+    display: grid;
+    grid-gap: 30px;
+    grid-template-columns: repeat(4, 1fr);
+    text-align: center;
+}
+
+.counters i {
+    color: lightskyblue;
+    margin-bottom: 5px;
+}
+
+.counters .counter {
+    font-size: 45px;
+    margin: 10px 0;
+}
+
+@media(max-width: 700px) {
+    counters .container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .counters .container > div:nth-of-type(1),.counters .container > div:nth-of-type(2) {
+        border-bottom: 1px lightskyblue solid;
+        padding-bottom: 20px;
+    } 
+}
